--- a/index.html
+++ b/index.html
@@ -3,22 +3,41 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>TEKKO Raumregelung</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;700&display=swap" rel="stylesheet">
     <style>
-      body {
-        font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-        background-color: #e0e4e7;
-        margin: 0;
+      :root {
+        --app-height: 100%;
+      }
+      html, body {
         padding: 0;
+        margin: 0;
+        width: 100%;
+        height: 100vh;
+        height: 100dvh; /* Dynamic viewport height for mobile browsers */
         overflow: hidden;
+        position: fixed; /* Prevents scrolling the whole page */
+        touch-action: none; /* Prevents all gestures except what we explicitly allow */
+        -webkit-user-select: none;
+        user-select: none;
+        background-color: #e0e4e7;
+        font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
+        overscroll-behavior: none; /* Disables pull-to-refresh and bounce effects */
       }
-      ::-webkit-scrollbar {
-        width: 0px;
+      #root {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+      }
+      .scrollable {
+        overflow-y: auto;
+        touch-action: pan-y; /* Allow vertical scrolling in specific areas only */
+        -webkit-overflow-scrolling: touch;
       }
       .admin-input {
         background: #f3f4f6;
@@ -37,6 +56,10 @@
         color: #6b7280;
         margin-bottom: 4px;
         margin-top: 12px;
+      }
+      /* Ensure buttons don't zoom on double tap */
+      button {
+        touch-action: manipulation;
       }
     </style>
   <script type="importmap">
