--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>TEKKO Raumregelung</title>
+    
+    <!-- Scripts für den 'No-Build' Modus -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;700&display=swap" rel="stylesheet">
     <style>
       body {
@@ -17,9 +21,7 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
-      ::-webkit-scrollbar {
-        width: 0px;
-      }
+      ::-webkit-scrollbar { width: 0px; }
       .admin-input {
         background: #f3f4f6;
         border: 1px solid #d1d5db;
@@ -39,7 +41,8 @@
         margin-top: 12px;
       }
     </style>
-  <script type="importmap">
+
+    <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
@@ -54,8 +57,10 @@
   }
 }
 </script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
+    <!-- Wir laden die index.tsx als Babel-Skript -->
+    <script type="text/babel" data-type="module" src="index.tsx"></script>
   </body>
 </html>
