--- a/index.html
+++ b/index.html
@@ -5,23 +5,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>TEKKO Raumregelung</title>
-    
-    <!-- Scripts für den 'No-Build' Modus -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;700&display=swap" rel="stylesheet">
     <style>
       body {
-        font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+        font-family: 'Inter', sans-serif;
         background-color: #e0e4e7;
         margin: 0;
         padding: 0;
         overflow: hidden;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
       }
-      ::-webkit-scrollbar { width: 0px; }
       .admin-input {
         background: #f3f4f6;
         border: 1px solid #d1d5db;
@@ -31,17 +24,7 @@
         color: #374151;
         font-size: 14px;
       }
-      .admin-label {
-        display: block;
-        font-size: 12px;
-        text-transform: uppercase;
-        letter-spacing: 0.05em;
-        color: #6b7280;
-        margin-bottom: 4px;
-        margin-top: 12px;
-      }
     </style>
-
     <script type="importmap">
 {
   "imports": {
@@ -50,17 +33,14 @@
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react",
     "qrcode.react": "https://esm.sh/qrcode.react@3.1.0?external=react",
-    "jszip": "https://esm.sh/jszip@3.10.1",
-    "file-saver": "https://esm.sh/file-saver@2.0.5",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
   </head>
   <body>
     <div id="root"></div>
-    <!-- Wir laden die index.tsx als Babel-Skript -->
-    <script type="text/babel" data-type="module" src="index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
