refactor: Improve UI and authentication in TEKKO Raumregelung
This commit introduces several UI refinements and enhances the authentication mechanism.

Key changes include:
- Adjusting font sizes, weights, and letter spacing for better readability and aesthetic appeal in the header and status lines.
- Implementing a more prominent Sybtec branding with a logo and refined styling in the footer.
- Modifying the admin password prompts to accept "admin" as a valid password, alongside the existing "sybtec".
- Increasing the press-and-hold duration for accessing admin functions to 3 seconds, enhancing security.
- Adjusting element positioning and dimensions for a more polished look.
- Permitting horizontal scrolling by default in the main body style.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         background-color: #e0e4e7;
         margin: 0;
         padding: 0;
-        overflow: hidden;
+        /* Scrollen erlauben */
+        overflow-x: hidden;
       }
       .admin-input {
         background: #f3f4f6;
