--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         background-color: #e0e4e7;
         margin: 0;
         padding: 0;
-        /* Scrollen erlauben */
+        /* Nur vertikales Scrollen erlauben */
         overflow-x: hidden;
+        overflow-y: auto;
+        width: 100vw;
       }
       .admin-input {
         background: #f3f4f6;
@@ -25,6 +27,10 @@
         color: #374151;
         font-size: 14px;
       }
+      /* Verhindert Pull-to-Refresh auf mobilen Browsern falls gewünscht */
+      body {
+        overscroll-behavior-y: contain;
+      }
     </style>
     <script type="importmap">
 {
@@ -34,6 +40,7 @@
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react",
     "qrcode.react": "https://esm.sh/qrcode.react@3.1.0?external=react",
+    "jszip": "https://esm.sh/jszip@3.10.1",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
