--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="de">
   <head>
@@ -7,28 +8,37 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;700&display=swap" rel="stylesheet">
     <style>
+      :root {
+        --color-primary: #00828c;
+      }
       body {
         font-family: 'Inter', sans-serif;
         background-color: #e0e4e7;
         margin: 0;
         padding: 0;
-        /* Nur vertikales Scrollen erlauben */
         overflow-x: hidden;
         overflow-y: auto;
         width: 100vw;
-      }
-      .admin-input {
-        background: #f3f4f6;
-        border: 1px solid #d1d5db;
-        border-radius: 4px;
-        padding: 8px 12px;
-        width: 100%;
-        color: #374151;
-        font-size: 14px;
-      }
-      /* Verhindert Pull-to-Refresh auf mobilen Browsern falls gewünscht */
-      body {
         overscroll-behavior-y: contain;
+      }
+      #root:empty {
+        background-color: #e0e4e7;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      #root:empty::after {
+        content: "";
+        width: 40px;
+        height: 40px;
+        border: 4px solid #00828c;
+        border-top-color: transparent;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+      @keyframes spin {
+        to { transform: rotate(360deg); }
       }
     </style>
     <script type="importmap">
